# better-as

./: Cargo.toml  README.md
src/: character.rs  checked_cast.rs  extending_cast.rs  lib.rs  number.rs  pointer.rs  truncating_cast.rs  wrapping_cast.rs
